[package]
authors = ["Beepbop0 <hey.nikhil42@gmail.com>"]
edition = "2018"
name = "spyfall"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "^0.8.0"
base32 = "0.4.0"
fastrand = "^1"
futures-util = "0.3.5"
serde = {version = "^1", features = ["derive", "rc"]}
serde_json = "^1"
smol = "^1"
